# facial-recognition-service

./: .gitignore  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  tests.yml
app/src/: main.py
app/src/services/: compare_encoding_service.py
src/: main.py
src/api/: validate_facial_encoding_api.py
src/api/facial_registration/: facial_registration_router.py
src/api/facial_verification/: compare_face_encoding_router.py  extract_face_encoding_router.py
src/api/health_check/: health_check_router.py
src/data/: face_encoding_request_model.py  face_image_request_model.py  face_verification_request_model.py
src/service/: validate_facial_encoding.py
src/service/image_processing/: face_encoding_comparing_service.py  face_encoding_service.py  image_processing_service.py  multiple_image_processing.py
src/services/: face_encoding_service.py
tests/: test_image-processing_service.py
